--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ python-json-logger==0.1.10
 SQLAlchemy==1.3.0
 Flask-SQLAlchemy==2.3.2
 Flask-Migrate==2.3.1
+geopy==1.19.0
 https://github.com/crazerace/crazerace-py/archive/0.5.1.zip
