--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ SQLAlchemy==1.3.0
 Flask-SQLAlchemy==2.3.2
 Flask-Migrate==2.3.1
 geopy==1.19.0
+psycopg2== 2.7.7
+uwsgi==2.0.18
 https://github.com/crazerace/crazerace-py/archive/0.6.0.zip
