Added user info in member data

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 env =
   TEST_MODE=1
   JWT_SECRET=test-jwt-secret
-  prometheus_multiproc_dir=/tmp/game-service/prom-data
+  USER_SERVICE_URL=http://localhost:8080
+  prometheus_multiproc_dir=./tests/resources/prom-data
